--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -28,9 +29,11 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.453.0",
+    "micro": "^10.0.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "stripe": "^17.2.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
