--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.453.0",
     "micro": "^10.0.1",
     "next": "^14.2.4",
+    "openai": "^4.71.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^17.2.1",
